# kodegen-native-notify

./: Cargo.toml  README.md
examples/: terminal.rs  terminal_notification.rs
src/: lib.rs
src/backends/: image_utils.rs  linux.rs  macos.rs  macos_bundle.rs  mod.rs  windows.rs
src/components/: analytics.rs  content.rs  lifecycle.rs  mod.rs  platform.rs  serde_time.rs  time_wrapper.rs  tracing.rs
tests/: component_tests.rs  integration_test.rs
tests/components/: mod.rs  test_analytics.rs  test_content.rs  test_lifecycle.rs  test_mod.rs  test_platform.rs  test_tracing.rs
