[package]
name = "kodegen_native_notify"
version = "0.5.0"
edition = "2024"
description = "Cross-platform native system notifications"

[dependencies]
tokio = { version = "1", features = ["sync", "rt", "rt-multi-thread", "time", "macros"] }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
parking_lot = "0.12"
tracing = "0.1"
rand = "0.9"
url = "2"
uuid = { version = "1", features = ["v4", "serde"] }
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
ammonia = "4.1"  # HTML sanitization with whitelist approach
pulldown-cmark = "0.13"  # CommonMark parser for safe Markdown processing

# macOS specific
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = "0.3"
objc2-user-notifications = "0.3"
block2 = "0.6"

# Linux specific
[target.'cfg(target_os = "linux")'.dependencies]
zbus = { version = "5.12", default-features = false, features = ["tokio"] }

# Windows specific
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62", features = [
    "Data_Xml_Dom",
    "UI_Notifications",
    "Win32_Foundation",
] }


[dev-dependencies]
tokio-test = "0.4"
